part11-ingress/02-simple-ingress/02-simple-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: my-app
            port:
              number: 80

# => kubectl apply -f . 
# => kubectl apply -f 01-simple-deployment.yaml
# => kubectl apply -f 02-simple-ingress.yaml

# we have exposed the pod to the outside world now we can access it direclty
# => curl localhost  => <H1>Hello my-deploy-7bb459bcc8-gcjsr </H1>
# => http://localhost:80
